# devops-calculator

./: CMakeLists.txt  Makefile  main.cpp
